[package]
name = "lds-color"
version = "0.1.0"
edition = "2021"
description = "Low discrepancy Sequence Color Generation in Rust"
repository = "https://github.com/luk036/lds-color"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lds-rs = "0.1.1"
palette = "0.7.3"
